...

                <LinearLayout
                    android:id="@+id/kathmandu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <LinearLayout
                    android:id="@+id/lumbini"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <LinearLayout
                    android:id="@+id/solukhumbu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <LinearLayout
                    android:id="@+id/chitwan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="90dp"
                        android:text="Chitwan"
                        android:textColor="@color/white" />

...

                <LinearLayout
                    android:id="@+id/dolakha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="90dp"
                        android:text="Dolakha"
                        android:textColor="@color/white" />

...

                <LinearLayout
                    android:id="@+id/mustang"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="90dp"
                        android:text="Mustang"
                        android:textColor="@color/white" />

...

                <LinearLayout
                    android:id="@+id/pokhara"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="90dp"
                        android:text="Pokhara"
                        android:textColor="@color/white" />

...

                <LinearLayout
                    android:id="@+id/gorkha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="90dp"
                        android:text="Gorkha"
                        android:textColor="@color/white" />

...

                <LinearLayout
                    android:id="@+id/janakpur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="90dp"
                        android:text="Janakpur"
                        android:textColor="@color/white" />

...

                <LinearLayout
                    android:id="@+id/tanahun"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
