...
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/dolakhaimage"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            app:iss_auto_cycle="true"
            app:iss_period="2500"
            app:iss_delay="0"/>
    </androidx.cardview.widget.CardView>
...
