<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_signupback"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/chitwan"
                android:scaleType="fitXY"
                android:alpha=".8"
                android:layout_gravity="center"
                android:layout_width="414dp"
                android:layout_height="300dp"/>

            <LinearLayout
                android:layout_marginLeft="25dp"
                android:layout_marginTop="-240dp"
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/tourlogo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/splashlogo" />

                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="Tour Guide Nepal"
                    android:textSize="29dp"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="20dp"
                android:layout_width="360dp"
                android:layout_gravity="center"
                android:alpha=".9"
                app:cardCornerRadius="20dp"
                android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="360dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:background="@drawable/gradient_login"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Create Account"
                            android:textColor="@color/black"
                            android:layout_marginStart="35dp"
                            android:textSize="32dp"
                            android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/newinputfullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Full name"
                    app:endIconMode="clear_text"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etname"
                        android:background="@color/white"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>



                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:id="@+id/newinputemail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Email"
                            app:endIconMode="clear_text"
                            app:startIconDrawable="@drawable/email"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="35dp"
                            android:layout_marginEnd="35dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etemail"
                                android:background="@color/white"
                                android:textStyle="bold"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:id="@+id/newinputphone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Phone number"
                            app:endIconMode="clear_text"
                            app:startIconDrawable="@drawable/phone"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="35dp"
                            android:layout_marginEnd="35dp"
                            app:prefixText="+977"
                            app:prefixTextColor="@color/black"
                            app:counterEnabled="true"
                            app:counterMaxLength="10">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etphone"
                                android:maxLength="10"
                                android:background="@color/white"
                                android:textStyle="bold"
                                android:inputType="number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/newinputpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=" New Password"
                    android:layout_marginTop="10dp"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/beforelock"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="textPassword"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/newinputconfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Confirm Password"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/lock"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etconpass"
                        android:background="@color/white"
                        android:textStyle="bold"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/btnsignup"
                                android:text="sign up"
                                android:textSize="20dp"
                                android:padding="10dp"
                                app:backgroundTint="#f06616"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:layout_marginLeft="35dp"
                                android:layout_marginRight="35dp"
                                android:layout_marginBottom="10dp"/>


                    </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:text="Already have an account?"
                        android:textSize="14dp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="Sign In"
                        android:id="@+id/btnlog"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                    </LinearLayout>

</ScrollView>